Body Component Completed
Body components display the header and song row.

--- a/src/SidebarOption.css
+++ b/src/SidebarOption.css
@@ -1,6 +1,6 @@
 .sidebarOption {
   display: flex;
-  color: grey;
+  color: rgb(165, 161, 161);
   align-items: center;
   height: 40px;
   cursor: pointer;
