--- a/src/Body.css
+++ b/src/Body.css
@@ -7,6 +7,10 @@
   background: linear-gradient(rgb(91, 87, 115), rgba(0, 0, 0, 1));
 }
 
+.body::-webkit-scrollbar {
+  display: none;
+}
+
 .body_info > img {
   height: 20vw;
   margin: 0 20px;
@@ -50,6 +54,7 @@
   margin-left: 50px;
   margin-top: 20px;
   margin-bottom: 20px;
+  color: #1db954;
 }
 
 .body_shuffle:hover {
